--- a/CSS/index.css
+++ b/CSS/index.css
@@ -202,32 +202,131 @@ header {
 }
 
 .footer_container {
+    background-color: #fafbfc;
     padding: 30px 0px 40px 0px;
-    background: #FAFBFC;
     display: flex;
     justify-content: space-evenly;
 }
 
 .footer_column {
+    width: 360px;
     display: flex;
     flex-direction: column;
+    gap: 8px;
+}
+
+.footer_column a {
+    text-decoration: none;
+    color: #696e79;
+    font-size: 15px;
+    padding-bottom: 5px;
 }
 
 .footer_column h3 {
     color: #282c3f;
     font-size: 14px;
-    margin-bottom: 25px;
+    font-weight: 700;
+    padding-bottom: 25px;
 }
 
-.footer_column a {
-    color: #696b79;
-    font-size: 15px;
-    text-decoration: none;
-    padding-bottom: 5px;
+.apple {
+    width: 140px;
+    height: 45px;
+    margin-right: 10px;
+}
+
+.android {
+    width: 140px;
+    height: 45px;
+}
+
+.footer_column img {
+    display: flex;
+}
+
+.download_link {
+    display: flex;
+    margin-top: 20px;
 }
 
 .copyright {
     color: #94969f;
     text-align: end;
     padding: 15px;
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.items-container {
+    width: 80%;
+    margin: 40px 10%;
+}
+.item-container{
+    width: 250px;
+}
+.item-image {
+    width: 100%;
+}
+.rating {
+  font-size: 12px;
+  font-weight: 700;
+}
+.company-name
+{
+    font-size: 16px;
+    font-weight: 700;
+   margin-top: 15px;
+    color: #282c3f;
+}
+.product-name
+{
+   color: #535766;
+    font-size: 14px;
+    line-height: 1;
+    margin-bottom: 0;
+    margin-top: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: 400;
+    display: block;
+}
+.pricing
+{
+        font-size: 14px;
+    line-height: 15px;
+    color: #282c3f;
+    white-space: nowrap;
+        margin: 10px 0 6px;
+   
+}
+.discounted-price
+{
+    font-size: 14px;
+    font-weight: 700;
+    color: #282c3f;
+}
+.original-price
+{
+        text-decoration: line-through;
+    color: #7e818c;
+    font-weight: 400;
+    margin-left: 5px;
+    font-size: 12px;
+}
+.discount {
+    color: #ff905a;
+    font-weight: 400;
+    font-size: 12px;
+    margin-left: 5px;
+}
+.bag-button{
+    background-color: lightgreen;
+    border: none;
+    padding: 5px 15px;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 18px;
+    width: 100%;
+    margin-top: 8px;
 }
