--- a/CSS/index.css
+++ b/CSS/index.css
@@ -189,7 +189,7 @@ header {
     font-weight: 700;
 }
 
-.category-items {
+.category-items , .items-container {
     width: 80%;
     margin: 50px 10%;
     display: flex;
@@ -263,6 +263,7 @@ header {
 }
 .item-container{
     width: 250px;
+    margin: 10px;
 }
 .item-image {
     width: 100%;
@@ -329,4 +330,27 @@ header {
     font-size: 18px;
     width: 100%;
     margin-top: 8px;
+    cursor: pointer;
+}
+.bag-item-count{
+    background-color: #f16565;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 18px;
+    padding: 0 6px;
+    height: 18px;
+    position: relative;
+    border-radius: 50%;
+    font-size: 12px;
+    color: #fff;
+    left: 13px;
+    top: -44px;
+    font-weight: 700;
+    cursor: pointer;
+}
+.action_container {
+    text-decoration: none;
+}
+a .action_container:link {
+    color:rgb(0, 0, 0);
 }
